# Lessons

./: .gitignore  .python-version  AutoCopyToTxt.py  CachedDecorator.py  Calculator.py  Calculator_TKinter.py  Calendar_TKinter.py  Clock.py  Clock1.py  Clock_2.py  CtkTopLevel.py  DateTime.py  Exeptions.py  Exif.py  Exif.py.bak  Exif_1.py  Exif_1.py.bak  Factorial.py  Hex.py  JSON2SQLite.py  LargeFiles.py  Learning.py  Macro.py  Move_Files_by_Exif.py  Parsing CSS_JS.py  Requaests.ipynb  Requests.ipynb  Requests.py  Scraping.py  TextEditor.py  TextEditor1.py  Timer.py  Tree.py  Tricks.py  WMI.py  WebBrowser.py  WebBrowser1.py  WinScripts.py  abstraction.py  all_ip.py  (+58 more)
.gigaide/: gigaide.properties
000000/: C4.py  EXIF.py  MessageBox.py  MessageBoxConstants.py  PyODBC.py  PyQt5_10_1.py  PyQt5_10_2.py  PyQt5_10_3.py  PyQt5_10_4.py  PyQt5_10_5.py  PyQt5_11_1.py  PyQt5_12_1.py  PyQt5_2_1.py  PyQt5_2_2.py  PyQt5_2_3.py  PyQt5_2_4.py  PyQt5_2_5.py  PyQt5_3_1.py  PyQt5_3_2.py  PyQt5_3_3.py  PyQt5_3_5.py  PyQt5_4_1.py  PyQt5_4_2.py  PyQt5_4_3.py  PyQt5_4_4.py  PyQt5_5_1.py  PyQt5_5_2.py  PyQt5_5_3.py  PyQt5_5_4.py  PyQt5_6_1.py  PyQt5_6_2.py  PyQt5_6_3.py  PyQt5_6_4.py  PyQt5_7_1.py  PyQt5_7_2.py  PyQt5_7_3.py  PyQt5_7_4.py  PyQt5_7_5.py  PyQt5_8_1.py  PyQt5_8_2.py  (+33 more)
1/: 1.py  2.py  3.py  4.py  6.py
3/: 1.py  10.py  11.py  2.py  3.py  4.py  5.py  6.py  8.py  9.py  big_text.txt
3.14/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py
Accounting/: Accounting.py  finance.db  home accounting.py  home_accounting2.py  home_accounting_with_design.py
Automation/: Categorize.py  (+2 more)
(+47 files in other folders)
